Test/dafny4/git-issue53.dfy.expect
git-issue53.dfy(5,11): Error: Type or type parameter is not declared in this scope: mode (did you forget to qualify a name or declare a module import 'opened'?) (note that names in outer modules are not visible in contained modules)
1 resolution/type errors detected in git-issue53.dfy
